Fix issue where video.js big play button was incorrect size on tablet breakpoint for fromage container

--- a/common/app/assets/stylesheets/module/content/_media-player.scss
+++ b/common/app/assets/stylesheets/module/content/_media-player.scss
@@ -66,6 +66,7 @@ $vjs-progress-inset-bottom: 4px;
         height: 100% !important;
     }
 }
+
 .vjs-big-play-button {
     cursor: pointer;
     position: absolute;
@@ -98,21 +99,13 @@ $vjs-progress-inset-bottom: 4px;
     }
 
     > span {
-        @mixin video-play-button-size($size) {
-            @include rem((
-                width: $size,
-                height: $size,
-                font-size: $size/6 // play triangle is em based so this scales it
-            ));
-        }
-
         display: inline-block;
         vertical-align: middle;
         position: relative;
         @include border-radius(50%);
-        @include video-play-button-size(50px);
+        @include video-play-button-size($vjs-small-button-size);
         @include mq(mobileLandscape) {
-            @include video-play-button-size(70px);
+            @include video-play-button-size($vjs-large-button-size);
         }
 
         background-color: rgba(51, 51, 51, .8);
